2015-07-28  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	Fix bug #23706 : Error checking preferences should be the same in preferences and error checking.. (Patch by Tomáš Hnyk)

2015-07-28  kitone  <kitone@gna.org>

	* configure.ac:
	Switching back to development version.

2015-06-25  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.52.1 release.

2015-06-25  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/Makefile.am:
	Fix bug #23662 : Subtitleeditor 0.52.0 "errorcheckingplugin.cc:32:36: fatal error: mincharacterspersecond.h: No such file or directory".

2015-06-24  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.52.0 release.

2015-06-24  kitone  <kitone@gna.org>

	* plugins/actions/styleeditor/dialog-style-editor.ui:
	Fix bug #23470 : Style editor does not permit margins to go over 100 and other problems. (Patch by Tomáš Hnyk)

2015-06-24  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	Fix bug #23660 : Keyboard shortcuts window is to small by default. (Patch by Tomáš Hnyk)

2015-06-21  kitone  <kitone@gna.org>

	* configure.ac:
	* plugins/actions/Makefile.am:
	* plugins/actions/wavefrommanagement/Makefile.am:
	* plugins/actions/wavefrommanagement/mediadecoder.h:
	* plugins/actions/wavefrommanagement/waveformgenerator.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.se-plugin.in:
	Fix bug #23656 : String "wavefrom" (inted of "waveform") in some locations.

2015-06-21  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #23656 : String "wavefrom" (inted of "waveform") in some locations

2015-06-07  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix bug #23588 : Name Subtitle Editor project files something else but name.xml.
